--- a/crypto_aead/aes128poetv1aes4/ref/Makefile
+++ b/crypto_aead/aes128poetv1aes4/ref/Makefile
@@ -1,22 +1,24 @@
-CC=gcc
-CFLAGS=-W -O3 -s
-LIBS =
+CC=clang
+CFLAGS=-W -Wall -Wextra -O3 -std=c99 -s
+
+.PHONY: clean m32-test-poet all
 
 all: test-poet test-encrypt poet-test-vectors
 
 test-poet:
-	$(CC) $(CFLAGS) -Wall -o $@ $@.c poet.c aes.c 
+	touch crypto_aead.h
+	$(CC) $(CFLAGS) -o $@ $@.c encrypt.c poet.c aes.c
 
 test-encrypt:
 	touch crypto_aead.h
-	$(CC) $(CFLAGS) -o $@ $@.c encrypt.c poet.c aes.c 
+	$(CC) $(CFLAGS) -o $@ $@.c encrypt.c poet.c aes.c
 
 poet-test-vectors:
-	$(CC) $(CFLAGS) -Wall -o $@ $@.c poet.c aes.c 
-
+	touch crypto_aead.h
+	$(CC) $(CFLAGS) -o $@ $@.c encrypt.c poet.c aes.c
 
 m32-test-poet:
-	$(CC) $(CFLAGS) -m32 -o $@ test-poet.c poet.c aes.c 
+	$(CC) $(CFLAGS) -m32 -o $@ test-poet.c poet.c aes.c
 
 clean:
 	rm -f crypto_aead.h
