--- a/crypto_aead/aes128poetv2aes4/Makefile
+++ b/crypto_aead/aes128poetv2aes4/Makefile
@@ -51,7 +51,7 @@ crypto_aead.h:
 	touch crypto_aead.h
 
 clean:
-	rm -f *.o $(NI)/*.o $(REF)/*.o core *.gch *~ 
+	rm -f *.o $(NI)/*.o $(REF)/*.o core* *.gch *~ 
 	rm -f poet-ref-test-vectors poet-ni-test-vectors poet-ni-benchmark
 
 
